added points to menu, changed some main photo